campaign resource created
